--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
-    margin: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #222222;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: red;
+}
+
+header {
+	height: 4em;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
+}
+
+.Body {
+	display: flex;
 }
